Fixed a small css error that caused all buttons across all pages to snap to the same size, fixed a small alignment issue on two pages

--- a/public/scss/components/toDo.scss
+++ b/public/scss/components/toDo.scss
@@ -1,22 +1,4 @@
-button {
-    display: inline-block;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1em;
-    width: 120px;
-    height: 50px;
-    cursor: pointer;
-    background: transparent;
-    background-color: #4fb178;
-    color: white;
-    border: outset;
-    border-width: 3px;
-    border-color: #4fb178;
-    border-radius: 10px;
-    margin: 0;
-    margin-bottom: 10px;
-    outline: none;
-}
+
 
 #tlAddFrame{
     text-align: left;
@@ -32,11 +14,10 @@ button {
             display: block;
             margin: 0 auto;
         }
-
-        
     }
-
+    
 }
+
 #tlShowFrame{
     color: black;
     font-size: 1em;
@@ -45,6 +26,25 @@ button {
 
     li {
         list-style-type: none;
+    }
+    button.tlDelButton {
+        display: inline-block;
+        text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1em;
+        width: 120px;
+        height: 50px;
+        cursor: pointer;
+        background: transparent;
+        background-color: #4fb178;
+        color: white;
+        border: outset;
+        border-width: 3px;
+        border-color: #4fb178;
+        border-radius: 10px;
+        margin: 0;
+        margin-bottom: 10px;
+        outline: none;
     }
 }
 #cqShowFrame{
@@ -65,12 +65,12 @@ button {
         }
     }
 
-    button {
+    .cqDelButton {
         display: inline-block;
         text-align: center;
         font-family: 'Montserrat', sans-serif;
         font-size: 1em;
-        width: 120px;
+        width: 90px;
         height: 50px;
         cursor: pointer;
         background: transparent;
@@ -81,36 +81,36 @@ button {
         border-color: #4fb178;
         border-radius: 10px;
         margin: 0;
-        margin-bottom: 10px;
+        margin-top: 5px;
         outline: none;
     }
 
     div.uiElement {
-        
+        margin: 0 10px;
         background-color: black;
         color: white;
-        padding: 10px;
+        padding: 20px;
         border-radius: 15px;
     }
 
     div.uniElement{
         background-color: #295e3f;
         color: white;
-        padding: 10px;
+        padding: 20px;
         border-radius: 15px;
     }
 
     div.nuiElement {
         background-color: #295e3f;
         color: white;
-        padding: 10px;
+        padding: 20px;
         border-radius: 15px;
     }
 
     div.nuniElement {
         background-color: #4fb178;
         color: white;
-        padding: 10px;
+        padding: 20px;
         border-radius: 15px;
     }
 }
